Clamp composition text when text is too long

input and textarea element can set maxlength attribute to limit the text
length. The desired behavior is to let the IME compose text as much as
they want, and then clamp the text at FinishComposingText() because if
we clamp the text at composition, IME can get confused. Most IMEs do not
seem to care about the change at the finishing stage.

By calling ReplaceComposition(), we get

1) an additional compositionupdate event before compositionend event
2) additional selectionchange events
3) a call to HTML{Input,TextArea}Element::HandleBeforeTextInsertedEvent
   which clamps the text length

Note that this is partially reverting http://crrev.com/2664603002,
and reviving the autofill issue when the text is longer than maxlength.
Autofill clearing + IME is essentially a general IME-editor conflict
issue and may need an additional change to fix it correctly.

BUG=721666

Change-Id: I96f24c57e32357248834c756482ffffd4626f29b