third_party/WebKit/Source/core/editing/InputMethodController.cpp
@@ -349,6 +349,14 @@ bool InputMethodController::FinishComposingText(
   if (!HasComposition())
     return false;
 
+  // If text is longer than maxlength, give input/textarea's handler a chance to
+  // clamp the text by replacing the composition with the same value.
+  Element* focused_element = GetDocument().FocusedElement();
+  bool too_long = (isHTMLInputElement(focused_element) &&
+                   toHTMLInputElement(*focused_element).TooLong()) ||
+                  (isHTMLTextAreaElement(*focused_element) &&
+                   toHTMLTextAreaElement(*focused_element).TooLong());
+
   const String& composing = ComposingText();
 
   if (confirm_behavior == kKeepSelection) {
@@ -359,8 +367,12 @@ bool InputMethodController::FinishComposingText(
     const PlainTextRange& old_offsets = GetSelectionOffsets();
     Editor::RevealSelectionScope reveal_selection_scope(&GetEditor());
 
-    Clear();
-    DispatchCompositionEndEvent(GetFrame(), composing);
+    if (too_long) {
+      ReplaceComposition(ComposingText());
+    } else {
+      Clear();
+      DispatchCompositionEndEvent(GetFrame(), composing);
+    }
 
     // TODO(editing-dev): Use of updateStyleAndLayoutIgnorePendingStylesheets
     // needs to be audited. see http://crbug.com/590369 for more details.
@@ -392,7 +404,11 @@ bool InputMethodController::FinishComposingText(
   if (composition_range.IsNull())
     return false;
 
-  Clear();
+  if (too_long) {
+    ReplaceComposition(ComposingText());
+  } else {
+    Clear();
+  }
 
   if (!MoveCaret(composition_range.End()))
     return false;
